// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinachAppContainer renders with scrollView and activityIndicator on Android 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "red",
        "borderWidth": 0,
        "flex": 1,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={1}
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "left": "50%",
          "marginLeft": -25,
          "position": "absolute",
          "top": "10%",
          "width": 50,
          "zIndex": 5,
        }
      }
    >
      <ActivityIndicator
        color="#104e01"
        size="large"
        style={{}}
        testID="activityIndicator"
      />
    </View>
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders with scrollView and activityIndicator on IOS 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "red",
          "borderWidth": 0,
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={1}
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "left": "50%",
          "marginLeft": -25,
          "position": "absolute",
          "top": "10%",
          "width": 50,
          "zIndex": 5,
        }
      }
    >
      <ActivityIndicator
        color="#104e01"
        size="large"
        style={
          {
            "left": 1.25,
            "top": 1.7,
          }
        }
        testID="activityIndicator"
      />
    </View>
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders with scrollView on Android 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "red",
        "borderWidth": 0,
        "flex": 1,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={1}
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders with scrollView on IOS 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "red",
          "borderWidth": 0,
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={1}
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders without scrollView and with ActivityIndicator on Android 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff59b",
        "borderColor": "#104e01",
        "borderRadius": 11.25,
        "borderWidth": 1,
        "height": 50,
        "justifyContent": "center",
        "left": "50%",
        "marginLeft": -25,
        "position": "absolute",
        "top": "10%",
        "width": 50,
        "zIndex": 5,
      }
    }
  >
    <ActivityIndicator
      color="#104e01"
      size="large"
      style={{}}
      testID="activityIndicator"
    />
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders without scrollView and with ActivityIndicator on IOS 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff59b",
        "borderColor": "#104e01",
        "borderRadius": 11.25,
        "borderWidth": 1,
        "height": 50,
        "justifyContent": "center",
        "left": "50%",
        "marginLeft": -25,
        "position": "absolute",
        "top": "10%",
        "width": 50,
        "zIndex": 5,
      }
    }
  >
    <ActivityIndicator
      color="#104e01"
      size="large"
      style={
        {
          "left": 1.25,
          "top": 1.7,
        }
      }
      testID="activityIndicator"
    />
  </View>
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders without scrollView on Android 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
</RCTSafeAreaView>
`;

exports[`SpinachAppContainer renders without scrollView on IOS 1`] = `
<RCTSafeAreaView
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
</RCTSafeAreaView>
`;
